--- a/themes/blankblank/src/css/main.css
+++ b/themes/blankblank/src/css/main.css
@@ -112,6 +112,9 @@ border-top-left-radius: 5px;
   margin-bottom: 20px;
 }
 @media (max-width: 767px) {
+  .uagb-column__inner-wrap {
+    width: calc(100% - 20px);
+  }
 .uagb-team__image-wrap {
     width: 100% !important;
 }
