--- a/themes/blankblank/src/css/main.css
+++ b/themes/blankblank/src/css/main.css
@@ -8,11 +8,20 @@
 }
 /* GENERAL */
 html {
-  background: #ffece5;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  background-attachment: fixed;
+  background: #feeae6;
+
+}
+html:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url('https://dom-v-gorax.ru/wp-content/themes/blankblank/images/mountains.jpg') no-repeat bottom center;
+    background-size: 100%;
 }
 .blocks-gallery-grid,
 .wp-block-gallery {
