--- a/themes/blankblank/src/css/main.css
+++ b/themes/blankblank/src/css/main.css
@@ -122,6 +122,9 @@ border-top-left-radius: 5px;
   margin-bottom: 20px;
 }
 @media (max-width: 767px) {
+  .kt-tab-inner-content-inner h2, .kt-tab-inner-content-inner p, .uagb-notice-text p {
+    padding: 0 10px;
+  }
   .uagb-column__inner-wrap {
     width: calc(100% - 20px) !important;
   }
@@ -177,6 +180,7 @@ border-top-left-radius: 5px;
   }
   .wp-block-kadence-tab {
     padding: 10px !important;
+    padding-bottom: 30px !important;
   }
   .kt-tab-title {
     padding: 10px !important;
