--- a/themes/blankblank/src/css/main.css
+++ b/themes/blankblank/src/css/main.css
@@ -122,7 +122,7 @@ border-top-left-radius: 5px;
   margin-bottom: 20px;
 }
 @media (max-width: 767px) {
-  .kt-tab-inner-content-inner h2, .kt-tab-inner-content-inner p, .uagb-notice-text p {
+  .kt-tab-inner-content-inner h2, .kt-tab-inner-content-inner p {
     padding: 0 10px;
   }
   .uagb-column__inner-wrap {
@@ -140,8 +140,8 @@ border-top-left-radius: 5px;
     width: calc(100% - 20px)!important;
 }
 .uagb-notice-text {
-  padding-left: 10px !important;
-  padding-right: 10px !important;
+  padding-left: 20px !important;
+  padding-right: 20px !important;
 }
   .carouselcontainer {
     padding: 5px;
@@ -155,9 +155,15 @@ border-top-left-radius: 5px;
     font-size: 14px !important;
     line-height: 16px !important;
   }
-  .slick-dots,
-  .slick-next,
+  .slick-next {
+    background: #fff;
+    right: 0 !important;
+  }
   .slick-prev {
+    background: #fff;
+    left: 0 !important;
+  }
+  .slick-dots {
     display: none !important;
   }
   .wp-block-kadence-tabs .kt-tabs-title-list {
